--- a/ui/main_window.ui
+++ b/ui/main_window.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="contextMenuPolicy">
-   <enum>Qt::DefaultContextMenu</enum>
+   <enum>Qt::NoContextMenu</enum>
   </property>
   <property name="windowTitle">
    <string>Межфондовый указатель к документам духовного ведомства периода до октября 1917 года</string>
@@ -65,6 +65,9 @@
           </property>
           <property name="contextMenuPolicy">
            <enum>Qt::CustomContextMenu</enum>
+          </property>
+          <property name="editTriggers">
+           <set>QAbstractItemView::EditKeyPressed</set>
           </property>
          </widget>
         </item>
@@ -162,7 +165,7 @@
              <rect>
               <x>0</x>
               <y>0</y>
-              <width>466</width>
+              <width>600</width>
               <height>198</height>
              </rect>
             </property>
@@ -175,10 +178,6 @@
      </widget>
     </item>
    </layout>
-   <zorder>widget_2</zorder>
-   <zorder>widget</zorder>
-   <zorder>splitter_2</zorder>
-   <zorder>splitter_2</zorder>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
